--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -1,5 +1,6 @@
-.testimonials__container {
+.container.testimonials__container {
     width: 40%;
+    padding-bottom: 4rem;
 }
 
 .client__avatar {
@@ -27,18 +28,22 @@
     margin: 0.8rem auto 0;
 }
 
+.swiper-pagination-clickable .swiper-pagination-bullet{
+    background: var(--color-primary);
+}
+
+
 /* ====== MEDIA QUERIES (MEDIUM DEVICES) ====== */
 @media screen and (max-width: 1024px) {
-    .testimonials__container {
+    .container.testimonials__container {
         width: 60%;
     }
-
 }
 
 /* ====== MEDIA QUERIES (SMALL DEVICES) ====== */
 
 @media screen and (max-width: 600px) {
-    .testimonials__container {
+    .container.testimonials__container {
         width: var(--container-width-sm);
     }
 
