--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,10 @@
 /* Declaración de variables de css */
 :root {
     /* Colores que se van a utilizar en toda la pagina */
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
-    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-bg: #17223B;
+    --color-bg-variant: #263859;
+    --color-primary: #FF6768;
+    --color-primary-variant: rgba(255, 103, 104, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
