--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,13 +1,9 @@
 .portfolio__container {
-    display: flex;
+    display: grid;
     justify-content: center;
     gap: 2.5rem;
+    grid-template-columns: repeat(3, 1fr);
 
-    /*  EN CASO DE TENER MAS DE UN ELEMENTO EN LA PAGINA
-        display: grid;
-        grid-template-columns: repeat(3, 1fr));
-        gap: 2.5rem;
-    */
 }
 
 .portfolio__item {
